# restapi-axum

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  docker-compose.yml
migrations/: 20230731052416_init.down.sql  20230731052416_init.up.sql
src/: lib.rs  main.rs
src/config/: app_conf.rs  mod.rs  postgres_conf.rs
src/extractor/: json_extractor.rs  mod.rs
src/middleware/: catch_panic.rs  mod.rs
src/modules/: mod.rs
src/modules/app/routes/: app_routes.rs  mod.rs
src/modules/author/entities/: author_entity.rs  mod.rs
src/modules/author/routes/: author_routes.rs  mod.rs
src/modules/swagger_ui/routes/: mod.rs  swagger_ui_routes.rs
src/routes/: routes.rs
src/shared/models/dto/response/: bad_request_response.rs  mod.rs  not_found_response.rs  reject_json_response.rs  reject_validator_response.rs  unprocessable_response.rs
src/shared/models/response/: failed_response.rs  failed_sqlx_response.rs  mod.rs
